@@ -458,7 +458,6 @@ import tools.hxinst.Main;
 import flash.Vector;
 
 import flash.events.SampleDataEvent;
-import flash.events.SamplesCallbackEvent;
 import flash.events.ShaderEvent;
 
 import flash.display.GraphicsBitmapFill;
