@@ -8,6 +8,7 @@
 	added memory related functions to php.Sys
 	added error when trying to extend Array, String, Date and Xml
 	fixed handling of implements ArrayAccess
+	fixed some minor things in flash10 api
 
 2008-10-04: 2.01
 	fixed php.Sys
